Add accounts tableview
Show individual accounts.

Add required convenience protocols.

Resolves: #TicketNumber

--- a/Manulife Account/Localization/Localizable.strings
+++ b/Manulife Account/Localization/Localizable.strings
@@ -13,3 +13,5 @@
 
 //Accounts
 "Accounts.Navigation.Title" = "Manulife";
+"Accounts.Type.Deposit" = "Deposit Accounts";
+"Accounts.Type.Investments" = "Investments";
