Update Accounts View style
Add headers and footers for account summaries.

Create extension for currency formatting.

Update styles and spacing.

Resolves: #TicketNumber

--- a/Manulife Account/Localization/Localizable.strings
+++ b/Manulife Account/Localization/Localizable.strings
@@ -7,6 +7,7 @@
 */
 
 //General
+"General.Close";
 
 //Launch
 "Launch.Open" = "Open";
@@ -15,3 +16,4 @@
 "Accounts.Navigation.Title" = "Manulife";
 "Accounts.Type.Deposit" = "Deposit Accounts";
 "Accounts.Type.Investments" = "Investments";
+"Accounts.Total" = "TOTAL CAD $ ACCOUNTS";
