Update launch screen and add styling for activities
Update launch screen assets and styling.

Add chronological sorting for activities.

Add summar header for accounts.

Update styling for activities page to maintain style consistency.

Add required localization for quit button.

Fix bug in login actions and keychainwrapper where the userdefaults were not being updated properly.

Fix bug in date extension format using minuites instead of months (m/M).

Resolves: #TicketNumber

--- a/Manulife Account/Localization/Localizable.strings
+++ b/Manulife Account/Localization/Localizable.strings
@@ -7,7 +7,7 @@
 */
 
 //General
-"General.Close";
+"General.Quit" = "Quit";
 
 //Launch
 "Launch.Open" = "Open";
@@ -17,3 +17,6 @@
 "Accounts.Type.Deposit" = "Deposit Accounts";
 "Accounts.Type.Investments" = "Investments";
 "Accounts.Total" = "TOTAL CAD $ ACCOUNTS";
+
+//Account Detail
+"Account.Detail.Balance.Title" = "CURRENT BALANCE";
